--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 
 .bg-color{
     background-color: #9191E9;
+    height: 100vh;
 }
 
 .btn-custom{
@@ -19,6 +20,35 @@
     position: absolute;
     top: 50%;
     left: 50%;
-
     transform: translate(-50%, -50%);
+}
+
+.btn-custom:hover{
+    color: white;
+}
+
+img{
+    width: 100%;
+    border: 10px solid white;
+    z-index: -1;
+}
+
+.article{
+    width: 90%;
+    padding: 5px 10px;
+    border: 10px solid white;
+    background-color: #fff;
+    font-size: 3rem;
+    font-weight: 600;
+
+    position: absolute;
+    top: 85%;
+}
+
+a{
+    font-size: 6rem !important;
+    position: absolute;
+    color: white;
+    right: 5%;
+    bottom: -45%;
 }
